syntax = "proto3";

package meteora.v1;

message Output {
  repeated MeteoraEvent data = 1;
}

message MeteoraEvent {
  string block_date = 1;
  int64 block_time = 2;
  uint64 block_slot = 3;
  string tx_id = 4;
  string signer = 5;
  string program_id = 6;
  string instruction_type = 7;
  string accounts = 8;
  bytes instruction_data = 9;
  bool is_inner_instruction = 10;
  uint32 instruction_index = 11;
  uint32 inner_instruction_index = 12;
  string outer_program = 13;
  string inner_program = 14;
  uint64 txn_fee = 15;
  int64 signer_sol_change = 16;
}
